--- a/assets/style.css
+++ b/assets/style.css
@@ -36,12 +36,10 @@ body {
   }
   
   .present {
-    background-color: #ff6961;
     color: white;
   }
   
   .future {
-    background-color: #77dd77;
     color: white;
   }
   
@@ -49,7 +47,7 @@ body {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06aed5;
+    background-color: green;
     color: white;
   }
   
